Fix: footer icons too high

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -4,7 +4,7 @@ body {
   color: lightgray;
 }
 
-a {
+#home {
   color: white;
   font-size: 24px;
   margin: 0;
